--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/typography": "^0.5.16",
 		"@tailwindcss/vite": "^4.0.0",
+		"@types/qs": "^6.9.18",
 		"daisyui": "5.0.0-beta.8",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
@@ -38,6 +39,7 @@
 	"dependencies": {
 		"dotenv": "^16.4.7",
 		"marked": "^15.0.7",
+		"qs": "^6.14.0",
 		"theme-change": "^2.5.0"
 	}
 }
